implemented react component header

--- a/client/component/header/header.css
+++ b/client/component/header/header.css
@@ -1,7 +1,192 @@
-.header-recipe{
+header{
+    display: flex;
+    width: 100%;
+    height: 7rem;
+    align-items: center;
 
 }
 
-.header-harmony{
+/* Header Logo */
+
+.header-logo {
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 4rem;
+}
+
+.header-recipe {
+    color: #3a3a3a;
+    text-align: left;
+    font-size: 4rem;
+    line-height: 4.2rem;
+    font-weight: 700;
+}
+
+.header-harmony {
+    color: #509e2f;
+    text-align: left;
+    font-size: 1.8rem;
+    line-height: 2.4rem;
+    font-weight: 500;
+    top: 4.2rem;
+    letter-spacing: 0.2rem;
+}
+
+/* Header Search bar */
+
+.header-input-box {
+    position: relative;
+    height: 4rem;
+    width: 35%;
+    background: #fff;
+    border: #707070 solid 2px;
+    border-radius: 9px;
+
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header-input-box i,
+.header-input-box .button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.header-input-box i {
+    left: 1rem;
+    font-size: 3rem;
+    color: #707070;
+}
+
+.header-input-box input {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    font-size: 1.8rem;
+    font-weight: 400;
+    border: none;
+    padding: 0 15.5rem 0 5rem;
+    background-color: transparent;
+}
+
+/* Navigation */
+
+.header-nav-icon{
+    visibility: hidden;
+}
+
+.header-navbar{
+    display: flex;
+    flex-direction: row;
+    gap: 2.4rem;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    list-style-type: none;
+    padding-left: 0;
+
+    margin-right: 4rem;
+}
+
+.header-navbar > li > a {
+    color: #3a3a3a;
+    text-decoration: none;
+    font-size: 1.8rem;
+    white-space: nowrap;
+}
+
+/* Mobile */
+@media only screen and (orientation: portrait) {
+    html, body {
+        overflow-x: hidden;
+    }
+    body {
+        position: relative
+    }
+
+    header{
+        flex-direction: column;
+        height: fit-content;
+    }
+    
+    /* Header Logo */
+    
+    .header-logo {
+        margin: 0;
+        
+    }
+    
+    /* Header Search bar */
+    
+    .header-input-box {
+        margin: 1rem 1rem 0 1rem;
+        width: auto;
+    }
+    
+    .header-input-box i,
+    .header-input-box .button {
+    }
+    
+    .header-input-box i {
+    }
+    
+    .header-input-box input {
+    }
+    
+    /* Navigation */
+
+    .header-nav-icon{
+        visibility: visible;
+        position: absolute;
+        right: 0;
+        top: 0;
+        margin: 0.75rem 1rem 0 0;
+    }
+
+    .header-nav-icon > span{
+        font-size: 4.5rem;
+    }
+    
+    .header-navbar{
+        border-top: rgb(0, 0, 0, 70%) 2px solid;    
+        gap: 0;
+        flex-direction: column;
+        margin: 1rem 0 0 0;
+        width: 100%;
+        overflow: hidden;
+        height: 0px;
+
+        transition: all 1s;
+    }
+
+    .header-navbar.show{
+        height: 215px;
+    }
+
+    @keyframes show {
+        0% {
+            height: 215px;
+        }
+        100% {
+            height: 0px;
+        }
+    }
+
+    .header-navbar > li {
+        width: 100%;
+    }
+    
+    .header-navbar > li > a {
+        border-bottom: rgb(0, 0, 0, 70%) 2px solid;
+        text-align: center;
+        width: 100%;
+        padding: 1rem 0;
+
+        display: block;
+    }
     
 }
