--- a/client/pages/explore/explore.css
+++ b/client/pages/explore/explore.css
@@ -49,8 +49,10 @@
     background-color: #84BD00;
 }
 
-
-
-
-/* Explore recipe cards */
-
+@media only screen and (orientation: portrait) {
+    /* Explore example search */
+    .explore-search {
+        width: 70%;
+        margin: 2rem 1rem 0 1rem;
+    }
+}
