--- a/client/component/sign_up_form/sign_up.css
+++ b/client/component/sign_up_form/sign_up.css
@@ -21,7 +21,7 @@
 .submit-button {
     width: 100%;
     height: 4rem;
-    background-color: #007bff; 
+    background-color:#509e2f; 
     color: white;
     border: none;
     border-radius: 16px;
@@ -31,5 +31,5 @@
 }
 
 .submit-button:hover {
-    background-color: #0056b3; 
+    background-color: #509e2f; 
 }
