--- a/client/component/login_form/login.css
+++ b/client/component/login_form/login.css
@@ -2,34 +2,37 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%; 
-    margin-top: 6rem; 
+    justify-content: center; 
+    width: 100%;
+    height: 50vh;
     background-color: #dee9e2;
-    padding: 2rem 0; 
+    padding: 3rem 0;
 }
 
-.input-field {
+.login-form .input-field {
     width: 100%;
     height: 4rem;
     margin-bottom: 1.5rem;
-    padding: 1rem;
+    padding: 0.8rem; 
     border: 1px solid #dee9e2;
     border-radius: 16px;
     font-size: 2.4rem;
 }
 
-.submit-button {
-    width: 100%;
+.login-form .submit-button {
+    width: 100%; 
+    max-width: 1000px; 
     height: 4rem;
-    background-color: #007bff; 
+    background-color: #509e2f;
     color: white;
     border: none;
     border-radius: 16px;
     cursor: pointer;
     transition: background-color 0.3s;
     font-size: 2.4rem;
+    margin-top: 1rem; 
 }
 
-.submit-button:hover {
-    background-color: #0056b3; 
+.login-form .submit-button:hover {
+    background-color: #509e2f;
 }
