Fixed button color

--- a/client/component/login_form/login.css
+++ b/client/component/login_form/login.css
@@ -9,7 +9,7 @@
     padding: 3rem 0;
 }
 
-.login-form .input-field {
+.input-field {
     width: 100%;
     height: 4rem;
     margin-bottom: 1.5rem;
@@ -19,7 +19,7 @@
     font-size: 2.4rem;
 }
 
-.login-form .submit-button {
+.submit-button {
     width: 100%; 
     max-width: 1000px; 
     height: 4rem;
@@ -33,6 +33,6 @@
     margin-top: 1rem; 
 }
 
-.login-form .submit-button:hover {
-    background-color: #509e2f;
+.submit-button:hover {
+    background-color: #377e18;
 }
