--- a/client/pages/recipe/recipe.css
+++ b/client/pages/recipe/recipe.css
@@ -1,22 +1,29 @@
-.recipe-first-section {
+/* First section */
+
+.recipe-section {
     margin-top: 3rem;
     display: flex;
     flex-direction: row;
     margin-left: 50%;
     transform: translate(-50%);
-    /* TODO background-color: #dee9e2; */
     width: 70%;
+
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.recipe-first-section > div {
+.recipe-section > div:nth-child(2) {
+    margin-left: auto;
+}
+
+.recipe-section > div {
     width: 47.5%;
+    display: flex;
+    flex-direction: column;
+    background-color: #FAFAFA;
+
 }
 
-.recipe-first-section > div:first-child {
-    background-color: #dee9e2;
-}
-
-.recipe-first-section > div:first-child > * {
+.recipe-section.first > div:first-child > * {
     margin-left: 3rem;
     margin-right: 3rem;
 }
@@ -25,12 +32,35 @@
     margin-top: 3rem;
     font-size: 4.2rem;
     font-weight: 600;
+    border-bottom: 2px solid darkgray;
+}
+
+.recipe-author {
+    margin-top: .75rem;
+    font-size: 2.125rem;
+}
+
+.recipe-info-header {
+    margin-top: 3rem;
+    font-size: 2.75rem;
+    font-weight: 600;
 }
 
 .recipe-rating {
-    margin-top: 4rem;
+    margin-top: .5rem;
     display: flex;
     align-items: center;
+}
+
+.recipe-rating span {
+    font-size: 3rem;
+}
+
+.recipe-star {
+    color: gold;
+}
+.recipe-star.e {
+    color: rgb(201, 201, 201);
 }
 
 .recipe-rating > p {
@@ -39,19 +69,89 @@
     font-size: 1.2rem;
 }
 
-.recipe-first-section > div:nth-child(2) {
-    margin-left: auto;
+.recipe-info {
+    margin-top: 2.5rem;
+    display: flex;
+    flex-direction: row;
 }
 
-.recipe-info > div:not(:first-of-type) {
-    font-size: 2rem;
+.recipe-info > span, .recipe-info > p{
+    margin-top: .5rem;
+    font-weight: 600;
+    font-size: 2.75rem;
 }
 
-.recipe-info > div:last-of-type {
+.recipe-info > p{
+    margin-left: 1rem;
+}
+
+.recipe-tags {
     margin-top: auto;
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
 }
 
 .recipe-image {
     max-width: 100%;
     height: auto;
 }
+
+/* Second section */
+
+.recipe-section.second {
+    margin-bottom: 10rem;
+}
+
+.recipe-section.second > div > * {
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
+
+.recipe-header {
+    margin-top: 3rem;
+    font-size: 3.75rem;
+    font-weight: 600;
+    border-bottom: 2px solid darkgray;
+    padding-right: 3rem;
+
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
+.recipe-serving {
+    margin-bottom: .25rem;
+    margin-left: auto;
+    color: #464646;
+    font-size: 2.75rem;
+    font-weight: 600;
+}
+
+.recipe-section.second ul {
+    margin-top: 1.5rem;
+    margin-bottom: 3rem;
+    list-style-type: none;
+}
+
+.recipe-section.second li:not(:first-of-type) {
+    margin-top: 1.5rem;
+}
+
+.recipe-section.second li {
+    margin-left: -5%;
+    font-size: 2rem;
+    display: flex;
+    flex-direction: row;
+}
+
+li.recipe-ingredient > p:first-child {
+    font-weight: 600;
+    min-width: 25%;
+}
+
+li.recipe-instruction > p:first-child {
+    font-weight: 600;
+    min-width: 5%;
+}
+
+
