Update recipe page layout and styling for mobile

--- a/client/pages/recipe/recipe.css
+++ b/client/pages/recipe/recipe.css
@@ -20,7 +20,6 @@
     display: flex;
     flex-direction: column;
     background-color: #FAFAFA;
-
 }
 
 .recipe-section.first > div:first-child > * {
@@ -85,10 +84,58 @@
     margin-left: 1rem;
 }
 
+.recipe-btn {
+    appearance: none;
+    background-color: #509e2f;
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    white-space: nowrap;
+}
+
+.recipe-btn:last-of-type {
+margin-left: 2.5%;
+}
+
 .recipe-tags {
     margin-top: auto;
     margin-bottom: 1rem;
     font-size: 1.5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
+.recipe-favorite {
+    margin-left: auto;
+    padding: .5rem;
+    color: red;
+    font-size: 6rem;
+    
+    transition: all 1000ms ease;
+}
+
+.recipe-favorite {
+    margin-left: auto;
+    padding: .5rem;
+    color: red;
+    font-size: 6rem;
+    user-select: none;
 }
 
 .recipe-image {
@@ -154,4 +201,47 @@ li.recipe-instruction > p:first-child {
     min-width: 5%;
 }
 
+@media only screen and (orientation: portrait) {
+    /* Explore example search */
+    .recipe-section {
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
+        margin-left: 0;
+        transform: translate(0);
+        width: 100%;
+    }
 
+    .recipe-section > div {
+        width: 100%;
+        margin-top: 1rem;
+    }
+
+    .recipe-section > div:nth-child(2) {
+        align-items: center;
+        padding: 1rem 0 1rem 0;
+    }
+
+    .recipe-image {
+        max-width: 80%;
+        height: auto;
+    }
+
+    .recipe-header {
+        display: flex;
+        flex-direction: column;
+        align-items: normal;
+    }
+
+    .recipe-header:last-of-type {
+        width: 80%;
+    }
+
+    .recipe-serving {
+        margin-left: 0;
+    }
+
+    li.recipe-instruction > p:first-child {
+        min-width: 10%;
+    }
+}
