Update recipeCard.css to adjust width and add overflow for recipe card title

--- a/client/component/recipe_card/recipeCard.css
+++ b/client/component/recipe_card/recipeCard.css
@@ -43,7 +43,9 @@
 .recipe-card-title{
     font-size: 2rem;
     font-weight: 600;
-    width: 70%;
+    width: 100%;
+    white-space: pre-wrap;
+    overflow: hidden;
 }
 
 .recipe-card-rating-container{
