--- a/client/component/header/header.css
+++ b/client/component/header/header.css
@@ -90,7 +90,6 @@ header{
     gap: 2.4rem;
     align-items: center;
     justify-content: center;
-    position: relative;
     list-style-type: none;
     padding-left: 0;
 
@@ -151,12 +150,10 @@ header{
     }
     
     .header-navbar{
-        border-top: rgb(0, 0, 0, 70%) 2px solid;    
         gap: 0;
         flex-direction: column;
         margin: 1rem 0 0 0;
         width: 100%;
-        height: 21.5rem;
     }
 
     .header-nav{
@@ -167,15 +164,19 @@ header{
     }
 
     .header-nav.open{
-        height: 23rem;
+        height: 27rem;
     }
-
 
     .header-navbar > li {
         width: 100%;
+        height: fit-content;
     }
     
-    .header-navbar > li > a {
+    .header-navbar > li:first-of-type{
+        border-top: rgb(0, 0, 0, 70%) 2px solid;    
+    }
+
+    .header-navbar > li {
         border-bottom: rgb(0, 0, 0, 70%) 2px solid;
         text-align: center;
         width: 100%;
