completing add recipe feature

--- a/client/component/add_recipe_form/add_form.css
+++ b/client/component/add_recipe_form/add_form.css
@@ -1,44 +1,51 @@
 .add-recipe-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; 
-    width: 100%;
-    height: 80%;
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
     background-color: #dee9e2;
-    padding: 3rem 0;
-    margin-top: 2%;
-    padding-top: 1%;
-
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.input-field {
+.add-recipe-form label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.add-recipe-form .input-field {
     width: 100%;
-    height: 4rem;
-    margin-bottom: 1.5rem;
-    padding: 0.8rem; 
-    border: 1px solid #dee9e2;
-    border-radius: 16px;
-    font-size: 2.4rem;
+    padding: 8px;
+    margin-top: 4px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
 
-.submit-button {
-    width: 100%; 
-    max-width: 1000px; 
-    height: 4rem;
-    background-color: #509e2f;
-    color: white;
-    border: none;
-    border-radius: 16px;
+.add-recipe-form .add-button {
+    padding: 8px 12px;
+    margin-top: 4px;
+    background-color: #dee9e2;
+    border: 1px solid #ccc;
+    border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s;
-    font-size: 2.4rem;
-    margin-top: 1rem; 
 }
 
-.submit-button:hover {
-    background-color: #377e18;
+.add-recipe-form .add-button:hover {
+    background-color: #d0e0d7;
 }
-#first{
+
+.add-recipe-form .submit-button {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
     background-color: #dee9e2;
+    border: none;
+    border-radius: 5px;
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.add-recipe-form .submit-button:hover {
+    background-color: #d0e0d7;
 }
