--- a/client/component/add_recipe_form/add_form.css
+++ b/client/component/add_recipe_form/add_form.css
@@ -1,6 +1,7 @@
 .add-recipe-form {
     max-width: 500px;
     margin: 0 auto;
+    margin-top: 2%;
     padding: 20px;
     background-color: #dee9e2;
     border-radius: 10px;
