Update explore page layout and styles

--- a/client/pages/explore/explore.css
+++ b/client/pages/explore/explore.css
@@ -1,6 +1,6 @@
 .explore-section {
     text-align: center;
-    margin: 4rem auto 8rem auto;
+    margin: 4rem auto 0 auto;
     position: relative;
     width: 80%;
 }
