--- a/client/component/household/household.css
+++ b/client/component/household/household.css
@@ -11,32 +11,46 @@
 .header {
     text-align: center;
     margin-bottom: 2rem;
-    font-size: 2rem;
-    font-family: 'Monospace'
+    font-family: 'Monospace';
+    color: #377e18;
+    transition: color 0.3s ease-in-out;
+    font-size: 1.8rem;
+    line-height: 2.4rem;
+    font-weight: 500;
+    top: 4.2rem;
+    letter-spacing: 0.1rem;
 }
 
 .section {
     width: 80%;
     margin-bottom: 2rem;
+    padding: 1rem;
     border-bottom: 2px solid #ccc;
-    padding-bottom: 1rem;
+    background-color: #FAFAFA; 
+    box-shadow: var(
+        --shadow-shadow-sm-box-shadow,
+        0px 3px 8px -1px rgba(50, 50, 71, 0.05),
+        0px 0px 1px 0px rgba(12, 26, 75, 0.24)
+    );
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .section h2 {
-    font-size: 1.6rem;
+    font-size: 3rem;
     margin-bottom: 1rem;
 }
 
 .user-details {
-    font-size: 1.4rem;
+    font-size: 1.6rem; /* Increased font size */
 }
 
-.list {
-    padding: 0;
+.shopping_list, .ingredients_list {
+    padding-left: 1.2rem;
+    list-style-position: inside; 
 }
 
-.list li {
-    font-size: 1.4rem;
+.shopping_list li, .ingredients_list li {
+    font-size: 1.6rem; /* Increased font size */
     margin-bottom: 0.5rem;
     list-style-type: disc;
 }
