--- a/client/component/login_form/login.css
+++ b/client/component/login_form/login.css
@@ -5,7 +5,7 @@
     justify-content: center; 
     width: 100%;
     height: 50vh;
-    background-color: #dee9e2;
+    background-color: #FAFAFA;
     padding: 3rem 0;
 }
 
@@ -14,7 +14,7 @@
     height: 4rem;
     margin-bottom: 1.5rem;
     padding: 0.8rem; 
-    border: 1px solid #dee9e2;
+    border: 1px solid #FAFAFA;
     border-radius: 16px;
     font-size: 2.4rem;
 }
