--- a/client/component/add_recipe_form/add_form.css
+++ b/client/component/add_recipe_form/add_form.css
@@ -9,8 +9,17 @@
 }
 
 .add-recipe-form label {
+    font-size: 2rem;
     display: block;
     margin-bottom: 10px;
+}
+
+.add-recipe-difficulty{
+    height: fit-content;
+}
+
+.add-recipe-image-input{
+    margin-bottom: 2rem;
 }
 
 .add-recipe-form .input-field {
