--- a/client/component/household/household.css
+++ b/client/component/household/household.css
@@ -2,36 +2,59 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     padding: 2rem 0;
 }
 
-.header {
-    text-align: center;
+.header-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
     margin-bottom: 2rem;
-    font-family: 'Monospace';
-    color: #377e18;
-    transition: color 0.3s ease-in-out;
-    font-size: 1.8rem;
+}
+
+
+.header {
+    font-family: 'Roboto', sans-serif;
+    color: rgb(58, 57, 57);
+    border-bottom: 2px solid #030303;
+    transition: border-bottom-color 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    font-size: 3.5rem;
     line-height: 2.4rem;
-    font-weight: 500;
-    top: 4.2rem;
+    font-weight: 700; 
     letter-spacing: 0.1rem;
+}
+.go-to-list {
+    font-size: 1.4rem;
+    color: #007bff; /* Default link color */
+    text-decoration: none;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin-left: 1rem;
+    transition: color 0.3s; /* Add transition for smooth color change */
+}
+
+.go-to-list:hover {
+    color: #0056b3; /* Color when hovering */
+}
+
+.join-btn {
+    margin-bottom: 1rem;
 }
 
 .section {
+    position: relative;
     width: 80%;
     margin-bottom: 2rem;
     padding: 1rem;
     border-bottom: 2px solid #ccc;
     background-color: #FAFAFA; 
-    box-shadow: var(
-        --shadow-shadow-sm-box-shadow,
-        0px 3px 8px -1px rgba(50, 50, 71, 0.05),
-        0px 0px 1px 0px rgba(12, 26, 75, 0.24)
-    );
+    box-shadow: var(--shadow-shadow-sm-box-shadow, 0px 3px 8px -1px rgba(50, 50, 71, 0.05), 0px 0px 1px 0px rgba(12, 26, 75, 0.24));
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -41,18 +64,17 @@
 }
 
 .user-details {
-    font-size: 1.6rem; /* Increased font size */
+    font-size: 1.6rem; 
 }
 
-.shopping_list, .ingredients_list {
-    padding-left: 1.2rem;
-    list-style-position: inside; 
+.list {
+    list-style-type: none;
+    padding-left: 0;
 }
 
-.shopping_list li, .ingredients_list li {
-    font-size: 1.6rem; /* Increased font size */
+.list li {
+    font-size: 1.6rem;
     margin-bottom: 0.5rem;
-    list-style-type: disc;
 }
 
 .btn {
@@ -71,4 +93,19 @@
 
 .btn:hover {
     background-color: #377e18;
+}
+
+.household-id {
+    display: flex;
+    align-items: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 2rem;
+}
+
+.household-id span {
+    margin-right: 0.5rem;
+}
+
+.household-id .id-label {
+    font-weight: bold;
 }
