--- a/client/pages/404/error.css
+++ b/client/pages/404/error.css
@@ -14,7 +14,7 @@
     font-size: 1.8rem; 
     color: #333;
     margin-bottom: 20px;
-    font-weight: 600; /* Thicker text */
+    font-weight: 600;
 }
 
 .not-found-message a {
