--- a/client/pages/recipe/recipe.css
+++ b/client/pages/recipe/recipe.css
@@ -1,3 +1,15 @@
+.recipe-new-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.recipe-new {
+    font-size: 5rem;
+    color: #509e2f;
+}
+
 /* First section */
 
 .recipe-section {
