--- a/client/component/household/household.css
+++ b/client/component/household/household.css
@@ -9,7 +9,7 @@
     justify-content: flex-start;
     width: 100%;
     min-height: 100vh;
-    padding: 2rem 0;
+    padding-top: 50px;
 }
 
 .header-container {
@@ -31,43 +31,21 @@
     letter-spacing: 0.1rem;
 }
 
-.go-to-list {
-    font-size: 1.4rem;
-    color: #007bff; 
-    text-decoration: none;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    margin-left: 1rem;
-    transition: color 0.3s;
-}
-
-.go-to-list:hover {
-    color: #0056b3; 
-}
-
-.join-btn {
-    margin-bottom: 1rem;
-}
-
 .section {
     position: relative;
     width: 80%;
     margin-bottom: 2rem;
     padding: 1rem;
-    border-bottom: 2px solid #ccc;
+    border-radius: 15px; 
     background-color: #FAFAFA; 
-    box-shadow: var(--shadow-shadow-sm-box-shadow, 0px 3px 8px -1px rgba(50, 50, 71, 0.05), 0px 0px 1px 0px rgba(12, 26, 75, 0.24));
+    box-shadow: 0px 3px 8px -1px rgba(50, 50, 71, 0.05), 0px 0px 1px 0px rgba(12, 26, 75, 0.24); 
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .section h2 {
     font-size: 3rem;
     margin-bottom: 1rem;
-}
-
-.user-details {
-    font-size: 1.6rem; 
+    color: #333; 
 }
 
 .list {
@@ -78,24 +56,20 @@
 .list li {
     font-size: 1.6rem;
     margin-bottom: 0.5rem;
+    color: #666; 
 }
 
-.btn {
-    width: 100%;
-    max-width: 200px;
-    height: 4rem;
-    background-color: #509e2f;
-    color: white;
-    border: none;
-    border-radius: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    font-size: 1.6rem;
+.go-to-list {
+    font-size: 1.4rem;
+    color: #007bff; 
+    text-decoration: none;
+    transition: color 0.3s;
     margin-top: 1rem;
+    display: block; 
 }
 
-.btn:hover {
-    background-color: #377e18;
+.go-to-list:hover {
+    color: #0056b3; 
 }
 
 .household-id {
