--- a/client/component/header/header.css
+++ b/client/component/header/header.css
@@ -39,42 +39,44 @@ header{
 /* Header Search bar */
 
 .header-input-box {
-    position: relative;
     height: 4rem;
     width: 35%;
     background: #fff;
     border: #707070 solid 2px;
     border-radius: 9px;
-
     margin-left: auto;
     margin-right: auto;
 }
 
-.header-input-box i,
-.header-input-box .button {
-    position: absolute;
+/* .header-input-box i{
     top: 50%;
     transform: translateY(-50%);
-}
+} */
 
 .header-input-box > form {
     height: 100%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .header-input-box i {
     left: 1rem;
     font-size: 3rem;
     color: #707070;
+    padding: 1rem;
 }
 
 .header-input-box input {
     height: 100%;
-    width: 135%;
+    width: 100%;
     outline: none;
     font-size: 1.8rem;
     font-weight: 400;
     border: none;
-    padding: 0 1rem 0 5rem;
+    padding: 0 1rem 0 .25rem;
     background-color: transparent;
 }
 
