--- a/client/component/header/header.css
+++ b/client/component/header/header.css
@@ -3,7 +3,8 @@
 header{
     display: flex;
     width: 100%;
-    height: 7rem;
+    /* height: 7rem; */
+    height: fit-content;
     align-items: center;
 }
 
@@ -89,7 +90,6 @@ header{
 .header-navbar{
     display: flex;
     flex-direction: row;
-    gap: 2.4rem;
     align-items: center;
     justify-content: center;
     list-style-type: none;
@@ -98,11 +98,27 @@ header{
     margin-right: 4rem;
 }
 
+.header-nav.logged-in {
+    margin-top: 1.2%;
+}
+
+.header-navbar.second {
+    border-top: 2px solid #acc4b5;
+    margin-top: 1rem;
+    padding-top: 1rem;
+    padding-right: 1rem;
+}
+
 .header-navbar > li > a {
-    color: #3a3a3a;
+    padding: 1rem 1.2rem;
     text-decoration: none;
     font-size: 1.8rem;
     white-space: nowrap;
+}
+
+.header-navbar > li :hover {
+    background-color: rgb(237, 237, 237);
+    border-radius: 9px;
 }
 
 /* Mobile */
