--- a/client/component/header/header.css
+++ b/client/component/header/header.css
@@ -174,6 +174,12 @@ header{
         width: 100%;
     }
 
+    .header-navbar.second {
+        border-top: none;
+        margin-top: 0;
+        padding-top: 0;
+    }
+
     .header-nav{
         overflow: hidden;
         transition: all 400ms;
@@ -190,7 +196,7 @@ header{
         height: fit-content;
     }
     
-    .header-navbar > li:first-of-type{
+    .header-navbar:not(:last-of-type) > li:first-of-type{
         border-top: rgb(0, 0, 0, 70%) 2px solid;    
     }
 
