--- a/client/component/recipe_card/recipeCard.css
+++ b/client/component/recipe_card/recipeCard.css
@@ -60,9 +60,10 @@
     margin-right: 1rem;
 }
 
-.recipe-card-star{
-    color: #FDC040;
+.recipe-card-heart{
+    color: red;
     font-size: 1.7rem;
+    margin-right: .5rem;
 }
 
 .recipe-card-rating{
